# fractal_comp

./: Cargo.toml  README.md  output.fic
src/: alpha_beta.rs  block_extractor.rs  decode.rs  encode.rs  main.rs  transform.rs  util.rs
src/gpu/: encoder.rs  mod.rs  transform_and_compare2x2.wgsl  transform_and_compare4x4.wgsl
src/tests/: apply_d4_transform.rs  test_alpha_beta.wgsl  transforms2x2.wgsl  transforms4x4.wgsl  transforms8x8.wgsl  wgsl_tests.rs
