[package]
name = "fractal_comp"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
futures-intrusive = "0.5.0"
futures-lite = "2.6.0"
image = "0.25.6"
pollster = "0.4.0"
wgpu = "25.0.2"


[[bin]]
name = "wgsl_tests"
path = "src/tests/wgsl_tests.rs"
[[bin]]
name = "transform_test"
path = "src/tests/apply_d4_transform.rs"
